--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage": "https://prachi237.github.io/Finance_club",
+{
+  "homepage": "https://prachi237.github.io/Finance_club",
   "name": "react-website-tut",
   "version": "0.1.0",
   "private": true,
