--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://prachi237.github.io/Finance_club",
-  "name": "react-website-tut",
+  "name": "finance-club",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
