--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://financeClubNITR.com",
+  "homepage": ".",
   "name": "finance-club",
   "version": "0.1.0",
   "private": true,
